# query_user_agent_rs

./: .gitignore  Cargo.toml  archive.ps1  build.release.cmd  query_user_agent_rs.cmd  query_user_agent_rs.dev.cmd  readme.md
doc/: .env
src/: app_config.rs  app_data.rs  main.rs  wts_array.rs  wts_wrapper.rs
