[package]
name = "query_user_agent_rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
awc = { version = "3.0.0", features = ["openssl"] }
dotenv = "0.15.0"
itertools = "0.10.3"
openssl = "0.10.41"
openssl-sys = "0.9.75"
regex = "1.6.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
windows = { version = "0.39.0", features = ["Win32_System_RemoteDesktop", "Win32_Foundation"] }
